--- a/src/app/appstructure/app-footer/app-footer.component.html
+++ b/src/app/appstructure/app-footer/app-footer.component.html
@@ -9,4 +9,4 @@
     </section>
     <div class="clear"></div>
 </footer>
-<footer class="footer-tark-css">Powered by TarkCss v0.0.0.1A</footer>
+<footer class="footer-tark-css"><span>Powered by TarkCss v0.0.0.1A</span></footer>
