--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,9 @@ body {
     font-family: Arial;
 }
 
-
 nav, main, footer {
     transition: margin-left .5s;
 }
-
 
 html, body {
     height:100%;
@@ -18,17 +16,6 @@ h1, h2 {
     color:#fff;
     text-shadow: 0px 0px 15px #afa;
 }
-
-
-@keyframes shadowBright {
-    from {
-        text-shadow: 0px 0px 3px white;
-    }
-    to {
-        text-shadow: 0px 0px 10px white;
-    }
-}
-
 
 .scrollbar-gray::-webkit-scrollbar-track
 {
@@ -49,388 +36,45 @@ h1, h2 {
 	background-color:transparent;
 }
 
-
-/* Table -------------------------------------------------*/
-
-
-table {
-    padding:5px;
-    border-spacing: 0px;
-    width:100%;
-    color:#333;
-}
-    table th, table td {
-        padding:10px 10px 10px 10px;
-        margin:0px;
-        text-align:left;
-    }
-    
-    table th {
-        border-bottom: 1px solid #ccc;
-        padding-bottom:5px;
-    }
-
-    table td:first-child {
-        border-top-left-radius:5px;
-        border-bottom-left-radius:5px;
-    }
-
-    table td:last-child {
-        border-top-right-radius:5px;
-        border-bottom-right-radius:5px;
-    }
-    
-    table tr {
-        transition: background-color .3s linear;
-    }
-    
-    table tr.selected td, td.selected {
-        background-color: #333;
-        color:white;
-    }
-
-    table tr:nth-child(2n+2) {
-        background-color:#eee;
-    }
-    
-    table tr:nth-child(2n+2):hover, table tr:nth-child(2n+3):hover {
-        background-color:#e5e5e5;
-    }
-
-
-.table-edit tr td:last-child {
-    width:20px;
-    text-align:right;
-}
-
-
-.table-edit tr td:last-child i {
-    cursor:pointer;
-}
-
-
-/* cards -------------------------------------------------*/
-
-
-.card {
-    box-shadow: 0 8px 16px 0 rgba(200,200,200,0.5);
-    border-radius: 5px;
-    transition: 0.2s all;
-    width:330px;
-    float:left;
-    margin-top:5px;
-    margin-bottom:20px;
-    margin-left:20px;
-    margin-right:20px;
-}
-
 .clear {
     clear:both;
 }
 
-@media only screen and (min-width: 900px) {
-    .card.small {
-        min-width:20%;
-    }
-
-    .card.medium {
-        min-width:25%;
-    }
-
-    .card.big {
-        min-width:30%;
-    }
-}
-
-@media only screen and (min-width: 600px) and (max-width:899px) {
-    .card.small {
-        min-width:25%;
-    }
-
-    .card.medium {
-        min-width:33%;
-    }
-
-    .card.big {
-        min-width:45%;
-    }
-}
-
-@media only screen and (max-width:599px) {
-    .card.small {
-        min-width:40%;
-    }
-
-    .card.medium {
-        min-width:95%;
-    }
-
-    .card.big {
-        min-width:95%;
-    }
-}
-
-.card:hover {
-    box-shadow: -1px 8px 14px 0 rgba(20,20,20,0.2);
-}
-
-.card img, .card-img {
-    width:100%;
-    border-top-left-radius:5px;
-    border-top-right-radius:5px;
-}
-
-.card-message {
-    margin-bottom:5px;
-}
-
-.card-subtitle {
-    margin-top:5px;
-    font-size:0.9em;
-    color:#333;
-}
-
-
-.card-subtitle a {
-    color:#af0000;
-    text-decoration:none;
-}
-
-.card-subtitle a:hover {
-    text-decoration:underline;
-}
-
-.card-subtitle img {
-    border-radius:0px;
-    box-shadow: 0px 1px 3px #555;
-    width:22px;
-    height:15px;
-    margin-bottom:-2px;
-}
-
-.card-container {
-    font-family:'Segoe UI';
-    padding: 2px 22px;
-}
-
-.card-container h3, .card-container h2, .card-container h1, .card-container h4, .card-container h5 {
-    text-shadow: 1px 1px 1px rgba(80,80,80,0.5); 
-    font-family:'Segoe UI';
-    color: #333;
-}
-
-    
 @media only screen and (min-width: 1301px) {
+    .footer-tark-css, .footer-page, .topnav, .topheader {
+        margin-left:250px;
+    }
     .sidenav {
         width:250px!important;
     }
     .sidenav .closebtn {
         display:none;
     }
+    .topnav-button-side {
+        display:none;
+    }
 }
 
-
-/* 
-============================================================================================================================================
-============================================================================================================================================
-============================================================================================================================================
-refatorar para componentes especificos
-============================================================================================================================================
-============================================================================================================================================
-============================================================================================================================================
- */
-/*menu header*/
-
-
-
-/* Servers ******************************************/
-
-.table-servers-container {
-    border: 1px inset #444;
-    padding: 0px;
-    height:200px;
-    overflow-y:scroll;
-    overflow-x:hidden;
+@media only screen and (max-width: 1300px) {
+    .footer-tark-css, .footer-page, .topnav, .topheader  {
+        margin-left:0px;
+    }
+    .sidenav {
+        width:0px;
+    }
+    .sidenav .closebtn {
+        display:block;
+    }
+    .topnav-button-side {
+        display:block;
+    }
 }
 
-.scrollbar-servers::-webkit-scrollbar
-{
-	background-color: #222;
-}
-
-.scrollbar-servers::-webkit-scrollbar-thumb
-{
-	border-radius: 3px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.2);
-	box-shadow: inset 0 0 6px rgba(0,0,0,.2);
-    background-color:#333;
-    border: 1px outset #444;
-}
-
-.scrollbar-servers::-webkit-scrollbar-button
-{
-    background-color:red;
-    background-color:#333;
-    border: 1px outset #444;
-}
-
-.scrollbar-servers::-webkit-scrollbar-button:vertical:increment 
-{
-    background-image: url('./assets/arrowdown.png');
-    background-size:cover;
-}
-
-.scrollbar-servers::-webkit-scrollbar-button:vertical:decrement 
-{
-    background-image: url('./assets/arrowup.png');
-    background-size:cover;
-}
-
-.table-servers tr td {
-    cursor:pointer;
-}
-
-.table-servers {
-    padding: 0px;
-}
-
-.table-servers td:first-child {
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-}
-
-.table-servers td:last-child {
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-}
-
-.cardservers-holder {
-    position:relative;
-}
-
-.cardservers {
-    position:relative;
-    border-radius: 0px;
-    background-color: #222;
-    float:none;
-    margin:auto;
-    margin-top:10px;
-    animation-name: fadeInSlide;
-    animation-duration: 0.8s;
-}
-
-@keyframes fadeInSlide {
+@keyframes shadowBright {
     from {
-        opacity: 0;
+        text-shadow: 0px 0px 3px white;
     }
-
     to {
-        opacity: 1;
+        text-shadow: 0px 0px 10px white;
     }
-}
-
-@media only screen and (max-width:650px) {
-    .cardservers {
-        margin-top:10px;
-    }
-
-    .topheader { 
-        font-size:18px;
-    }
-    main>div:first-of-type>section:first-of-type {
-        margin-left:10px;
-    }
-    
-    @keyframes fadeInSlide {
-        from {
-            opacity: 0;
-        }
-
-        to {
-            opacity: 1;
-        }
-    }
-}
-
-.server-description {
-    animation-name: fadeIn;
-    animation-duration: 0.8s;
-}
-
-
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-.cardservers h4 {
-    margin:0px;
-    padding:10px;
-    color:#888;
-}
-
-.cardservers-container {
-    background-color: #2d2d2d;
-    padding:10px;
-}
-
-
-.cardservers .card-subtitle {
-    position:relative;
-}
-.cardservers-container button {
-    background-color: #3a3a3a;
-    border: outset 1px #555;
-    color: #ccc;
-    padding: 4px 10px 4px 10px;
-}
-
-.cardservers-container .btnConnect {
-    position:absolute;
-    right:0px;
-    top:5px;
-}
-
-.cardservers-container .btnRefresh {
-    position:absolute;
-    right:80px;
-    top:5px;
-}
-
-.cardservers-container .btnBack {
-    position:absolute;
-    right:160px;
-    top:5px;
-}
-
-.cardservers hr {
-    border-top: 1px #111 solid;
-    border-bottom: 1px #777 solid;
-    border-left: none;
-    border-right: none;
-}
-
-.cardservers .card-message {
-    text-shadow: 0px 1px 0px #000;
-    font-family: 'Segoe UI';
-    color: #ccc;
-}
-
-.cardservers-container button:disabled {
-    color:#6f6f6f;
-    text-shadow: 0px 1px 0px #989898;
-}
-
-.cardservers-container button:active {
-    border: inset 1px #555;
-}
-
-.cardservers-container button:focus {
-    outline:none;
 }
