--- a/src/app/appstructure/app-menu/app-menu.component.css
+++ b/src/app/appstructure/app-menu/app-menu.component.css
@@ -1,16 +1,15 @@
 .sidenav {
     height: 100%;
-    width: 250px;
     position: fixed;
     z-index: 1;
     top: 0;
-    left: 0;
     background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 40px;
     box-shadow:3px 0px 5px;
 }
+
 
 .sidenav>article {
     width:250px;
@@ -84,7 +83,7 @@
         .sidenav a:hover, .offcanvas a:focus {
             color: #f1f1f1 !important;            
             text-shadow: 0px 0px 15px white;
-            
+            transform: scale(1.1);            
         }
 
     .sidenav .social {
@@ -147,6 +146,7 @@
 .fa-round:hover {
     opacity: 1;
     box-shadow: 0px 0px 25px #fff;
+    transform: scale(1.2);
 }
 
 .fa-facebook {
@@ -154,21 +154,28 @@
     color: white;
 }
 
+.fa-facebook:hover { box-shadow: 0px 0px 25px #5B99f8; }
+
 .fa-twitter {
     background: #55ACEE;
     color: white;
 }
+
+.fa-twitter:hover { box-shadow: 0px 0px 25px #75BCFF; }
 
 .fa-linkedin {
     background: #007bb5;
     color: white;
 }
 
+.fa-linkedin:hover { box-shadow: 0px 0px 25px #30AbF5; }
 
 .fa-skype {
     background: #00aff0;
     color: white;
 }
+
+.fa-skype:hover { box-shadow: 0px 0px 25px #20AfFF; }
 
 .fa-github {
     background: #24292e;
