testing prod build

--- a/src/app/appstructure/app-header/app-header.component.html
+++ b/src/app/appstructure/app-header/app-header.component.html
@@ -16,7 +16,7 @@
             <span>></span>
         </a>
         <a href="#news" class="nav-page">
-            <span>{{pageTitle}}</span>
+            <span>pageTitle</span>
         </a>
         <i class="fa fa-battery-full battery-bar" aria-hidden="true"></i>
     </div>
